Fixed the alignment issues

--- a/piggyvest_3.css
+++ b/piggyvest_3.css
@@ -25,6 +25,7 @@
         background-color: #f2f7f8;
         width: 100%;
         z-index: 999;
+        border: 1px solid black;
     }
     
     .container{
@@ -76,6 +77,8 @@
     .sponsors{
         margin-top: 150px;
       align-content: center;
+      justify-content: center;
+      align-items: center;
     }
     .sponsors_img{
     display: flex;
@@ -108,9 +111,12 @@
 /* Section Extra  */
     .extra{
         display: flex;
-        margin: 170px 20px 0px 20px;
-        gap: 100px;
+        margin: 170px 0px 0px 20px;
+        width: 1180px;
         padding-bottom: 50px;
+        padding-left: 0px;
+        padding-right: 0;
+        justify-content: center;
         border-bottom: 1px solid rgb(179, 174, 174);
     }
 
@@ -124,12 +130,16 @@
         font-size: 14px;
     }
 
+    .extra .license, .footer_links{
+       width: 300px;
+    }
+
     .extra .license{
         display: flex;
         flex-direction: column;
         align-items: center;
         gap: 25px;
-        margin-right: 30px;
+        padding-left: 25px;
     }
 
     .footer_links{
@@ -149,11 +159,16 @@
         justify-content: flex-end;
    }
 .extra div:last-child{
-    margin-left: 120px;
+    margin-left: 20px;
+    padding-right: 0px;
+    margin-right: 0px;
+    justify-self: flex-end;
 }
 
 /* Section Last */
 .last p{
-    font-size: 11px;
+    font-size: 12px;
     margin-bottom: 40px;
+    margin-left: 35px;
+    padding-top: 20px;
 }
